name:                advent-of-code-y2022
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/PiotrRogulski/advent-of-code-y2022#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Rogulski
maintainer:          piter.rogulski@gmail.com
copyright:           Copyright (c) 2022 Piotr Rogulski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable advent-of-code-y2022
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        ,text
                        ,split
                        ,lens
                        ,utility-ht
                        ,parsec
                        ,composition
  ghc-options:         -Wall
                       -Wextra
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
